k8s/ingress.yaml
# Kubernetes Ingress für Cloudy Feedback
# Dieses Ingress erzeugt automatisch einen AWS ALB
# und routet Traffic zu Frontend und Backend.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudy-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health

    # HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:038217523163:certificate/69a06ea4-5654-47e4-968a-2eec9a823239
    alb.ingress.kubernetes.io/subnets: subnet-023d3e4b1a03b36f8,subnet-02065bd73f7d47904

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          # Backend API zuerst
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080

          # Frontend danach
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
